--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
             <p>Search time: <span id="searchTimeInfo"></span></p>
             <p>Max Open set size: <span id="maxOpenSetSizeInfo"></span></p>
             <p>Size of 'cameFrom' map: <span id="cameFromSizeInfo"></span></p>
+            <p>Path Distance: <span id="pathDistanceInfo">0</span> km</p>
         </div>
     </div>
+    <script src="PathfinderReportGenerator.js"></script>
     <script src="DijkstraPathfinder.js"></script>
     <script src="AStarPathfinder.js"></script>
     <script src="BidirectionalPathfinder.js"></script>
